--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
     <html>
     <head>
-      <img src="logosquare.png" alt="logo">
+      <img src="logoSquare.png" alt="logo">
       <meta charset='utf-8'>
       <meta name='viewport' content='width=device-width'>
       <title>Privacy Policy</title>
