--- a/index.html
+++ b/index.html
@@ -9,38 +9,35 @@
     <body>
     <strong>Privacy Policy</strong> <p>
                   Christopher Aubin built the Moola app as
-                  a free app. This service is provided by
-                  Christopher Aubin at no cost and is intended for use as
+                  a free app. Moola is provided at no cost and is intended for use as
                   is.
                 </p> <p>
-                  This page is used to inform visitors regarding my
-                  policies surrounding the collection, use, and disclosure of personal
+                  This page is used to inform visitors regarding Moola's
+                  policies surrounding the collection, use, and disclosure of the personal
                   information of Moola users.
                 </p> <p>
-                  If you choose to use my Service, then you agree to
+                  If you choose to use Moola, then you agree to
                   the collection and use of information in relation to this
-                  policy. The personal information that I collect is
-                  used for providing and improving Moola. I will not use or share your information with
-                  anyone except as described in this Privacy Policy.
+                  policy. The personal information that Moola collects is
+                  used for providing and improving Moola. Moola will not use or share your information with
+                  anyone except as described in this privacy policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
-                  For a better experience, while using Moola, I
-                  may require you to provide us with certain personally
+                  For a better experience, while using Moola, you
+                  may be required to provide certain personally
                   identifiable information, including but not limited to your name, phone number and bank account number.
                 </p> <div><p>
-                    The app does use third party services that may collect
-                    information used to identify you.
-                  </p> <p>
-                    Link to privacy policy of third party service providers used
-                    by the app
+                    The app does use reputable third party services that may collect
+                    information used to identify you. Links to the privacy policies of those third party service providers can be found below:
                   </p> <ul><li><a href="https://www.google.com/policies/privacy/" target="_blank" rel="noopener noreferrer">Google Play Services</a></li><!----><li><a href="https://firebase.google.com/policies/analytics" target="_blank" rel="noopener noreferrer">Google Analytics for Firebase</a></li><li><a href="https://firebase.google.com/support/privacy/" target="_blank" rel="noopener noreferrer">Firebase Crashlytics</a></li><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----><!----></ul></div> <p><strong>Log Data</strong></p> <p>
-                  I want to inform you that whenever you
-                  use Moola, in a case of an error in the app
-                  I collect data and information (through third party
-                  products) on your phone called log data. This log data may
+                  When you use Moola, in the case of an error in the app,
+                  data and information (through third party
+                  products) is collected from your phone in the form log data. 
+                  This data is used to aid in the diagnosing and addressing of the
+                  error in question. This log data may
                   include information such as your device Internet Protocol
                   (“IP”) address, device name, operating system version, the
-                  configuration of the app when utilizing my Service,
-                  the time and date of your use of the Service, and other
+                  configuration of the app at the time that the error was encountered,
+                  the time and date at which the error was encountered, and other
                   statistics.
                 </p> <p><strong>Cookies</strong></p> <p>
                   Cookies are files with a small amount of data that are
@@ -48,56 +45,53 @@
                   to your browser from the websites that you visit and are
                   stored on your device's internal memory.
                 </p> <p>
-                  This Service does not use these “cookies” explicitly. However,
+                  Moola does not use these cookies explicitly. However,
                   the app may use third party code and libraries that use
-                  “cookies” to collect information and improve their services.
-                  You have the option to either accept or refuse these cookies
-                  and know when a cookie is being sent to your device. If you
-                  choose to refuse our cookies, you may not be able to use some
-                  portions of this Service.
+                  cookies to collect information and improve their services.
+                  You may either permit or refuse the use of these cookies. If you
+                  choose to refuse the use of cookies, you may not be able to use some
+                  aspects of Moola.
                 </p> <p><strong>Service Providers</strong></p> <p>
-                  I may employ third-party companies and
+                  Moola may employ third-party companies and
                   individuals due to the following reasons:
                 </p> <ul><li>To facilitate our Service;</li> <li>To provide the Service on our behalf;</li> <li>To perform Service-related services; or</li> <li>To assist us in analyzing how our Service is used.</li></ul> <p>
-                  I want to inform users of Moola
-                  that these third parties have access to your Personal
-                  Information. The reason is to perform the tasks assigned to
+                  Thus, we would like to inform users of Moola
+                  that these third parties may have access to your personal
+                  information, but only to perform tasks assigned to
                   them on our behalf. However, they are obligated not to
                   disclose or use the information for any other purpose.
                 </p> <p><strong>Security</strong></p> <p>
-                  I value your trust in providing us your
-                  personal information, thus we are striving to use commercially
-                  acceptable means of protecting it. But remember that no method
+                  Moola values your trusting us with your
+                  personal information, and thus we strive to employ commercially
+                  acceptable securtiy procedures to protect it. However, no method
                   of transmission over the internet, or method of electronic
-                  storage is 100% secure and reliable, and I cannot
+                  storage is 100% secure and reliable, and thus Moola cannot
                   guarantee its absolute security.
                 </p> <p><strong>Links to Other Sites</strong></p> <p>
-                  This Service may contain links to other sites. If you click on
+                  Moola may occansionally present links to other sites. If you click on
                   a third-party link, you will be directed to that site. Note
-                  that these external sites are not operated by me.
-                  Therefore, I strongly advise you to review the
-                  privacy policies of those websites. I have
-                  no control over and assume no responsibility for the content,
+                  that these external sites are not operated by Moola.
+                  Therefore, we strongly advise you to review the
+                  privacy policies of those websites. Moola has
+                  no control over and assumes no responsibility for the content,
                   privacy policies, or practices of any third-party sites or
                   services.
                 </p> <p><strong>Children’s Privacy</strong></p> <p>
-                  I do not knowingly collect personally
+                  Moola does not knowingly collect personally
                   identifiable information from children under 13 years of age. In the case
-                  I discover that a child under 13 has provided
-                  me with personal information, I immediately
-                  delete this from our servers. If you are a parent or guardian
+                  we discover that a child under 13 has provided
+                  Moola with personal information, it is immediately
+                  deleted from our storage. If you are a parent or guardian
                   and you are aware that your child has provided us with
-                  personal information, please contact me so that
-                  I will be able to do necessary actions.
+                  personal information, please contact Moola so that
+                  we will be can take the necessary actions.
                 </p> <p><strong>Changes to This Privacy Policy</strong></p> <p>
-                  I may update our Privacy Policy from
+                  Moola's privacy policy may be updated from
                   time to time. Thus, you are advised to review this page
-                  periodically for any changes. I will
-                  notify you of any changes by posting the new Privacy Policy on
-                  this page.
+                  periodically for any changes.
                 </p> <p>This policy is effective as of 2021-04-16</p> <p><strong>Contact Us</strong></p> <p>
-                  If you have any questions or suggestions about my
-                  Privacy Policy, do not hesitate to contact me at chris.aubin.dev@gmail.com.
+                  If you have any questions or suggestions about Moola's
+                  privacy policy, do not hesitate to reach out to chris.aubin.dev@gmail.com.
     </body>
     </html>
       
